# cftime-rs

./: .gitignore  .readthedocs-requirements.txt  .readthedocs.yaml  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml
benchmark/: cf_time_comparison.py
ci/python_test/: Dockerfile  Dockerfile.dockerignore
docs/python/source/: conf.py  index.md
docs/python/source/api_documentation/: index.md
docs/python/source/get-started/: index.md
python/cftime_rs/: __init__.py  cftime_rs.pyi
python/cftime_rs/tests/: test_functions.py
src/: calendars.rs  constants.rs  datetime.backup.rs  datetime.rs  decoder.rs  duration.rs  encoder.rs  errors.rs  lib.rs  main.rs  parser.rs  py_bindings.rs  timezone.rs  utils.rs
src/datetimes/: all_leap.rs  day_360.rs  julian.rs  mod.rs  no_leap.rs  proleptic_gregorian.rs  standard.rs  traits.rs
