[package]
name = "cftime-rs"
version = "0.1.5"
edition = "2021"
authors = ["Antoine Gibek"]
categories = ["science", "date-and-time"]
description = "Rust implementation of cftime"
keywords = ["cftime", "cf-conventions", "climate", "netcdf", "meteorology"]
license = "AGPL-3.0"
readme = "README.md"
repository = "https://github.com/antscloud/cftime-rs"

[dependencies]
chrono = "0.4.31"
thiserror = "1.0.49"
pyo3 = {version = "0.19.0", features = [ "extension-module" ]}
rand = "0.8.4"

[lib]
name = "cftime_rs"
crate-type = ["cdylib"]
